<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        <TextView
            android:id="@+id/textView9"
            android:layout_width="352dp"
            android:layout_height="68dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:text="The below links, are available, if ever you need them, please make use of the wonderful services and assistance they offer."
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="139dp"
        android:layout_height="47dp"
        android:layout_marginTop="50dp"
        android:text="@string/women_aid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="337dp"
            android:layout_height="84dp"
            android:layout_marginStart="44dp"
            android:text="The Women's Aid 24hr National Freephone Helpline offers confidential information, support and understanding to women in the Republic of Ireland, who are being abused by current or former boyfriends, partners or husbands.  "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="247dp"
        android:layout_height="51dp"
        android:layout_marginTop="50dp"
        android:text="@string/dv_and_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="333dp"
            android:layout_height="107dp"
            android:layout_marginStart="44dp"
            android:text="Our services around the country are providing emotional support, counselling and advice, helping women and children to find safe accommodation, supporting them to access courts and make applications for domestic violence protection orders, for example. "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="225dp"
        android:layout_height="51dp"
        android:layout_marginTop="50dp"
        android:text="@string/w_and_g_network"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintTop_toTopOf="@id/textView2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="329dp"
            android:layout_height="75dp"
            android:layout_marginStart="44dp"
            android:text="There are supports available to help keep you safe. Your GP can help by referring you to appropriate supports and services in your local area."
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="128dp"
        android:layout_height="51dp"
        android:layout_marginTop="50dp"
        android:text="@string/safe_ire"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="325dp"
        android:layout_height="90dp"
        android:layout_marginStart="44dp"
        android:text="We offer help and advice over the telephone and online, ranging from emotional support to practical support and signposting to other services that can help you."
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>